--- a/AgentDiscoveries-Frontend/package.json
+++ b/AgentDiscoveries-Frontend/package.json
@@ -7,34 +7,35 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server --hot --inline",
-    "test": "mocha --require babel-register app/test/helpers/setup-tests.js app/test/**/*.js",
+    "test": "mocha --require @babel/register app/test/helpers/setup-tests.js app/test/**/*.js",
     "lint": "eslint ./app --ext .js,.jsx"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
+    "@babel/register": "^7.21.0",
+    "babel-loader": "^9.1.2",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chromedriver": "^2.44.1",
-    "css-loader": "^3.2.0",
+    "css-loader": "^6.8.1",
     "eslint": "^4.15.0",
     "eslint-plugin-react": "^7.5.1",
-    "favicons-webpack-plugin": "^1.0.1",
-    "file-loader": "^1.1.6",
+    "favicons-webpack-plugin": "^6.0.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "mocha": "^5.1.1",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^7.0.0",
-    "sass-loader": "^6.0.6",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.3.1",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "sinon": "^4.5.0",
     "style-loader": "^0.20.3",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.86.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
