--- a/AgentDiscoveries-Frontend/package.json
+++ b/AgentDiscoveries-Frontend/package.json
@@ -6,7 +6,7 @@
   "main": "./app/src",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server --hot --inline",
+    "start": "webpack-dev-server --hot",
     "test": "mocha --require @babel/register app/test/helpers/setup-tests.js app/test/**/*.js",
     "lint": "eslint ./app --ext .js,.jsx"
   },
@@ -36,7 +36,7 @@
     "style-loader": "^0.20.3",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
     "moment": "^2.29.4",
