--- a/AgentDiscoveries-Frontend/package.json
+++ b/AgentDiscoveries-Frontend/package.json
@@ -18,23 +18,21 @@
     "@babel/preset-react": "^7.22.3",
     "@babel/register": "^7.21.0",
     "babel-loader": "^9.1.2",
-    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
-    "chromedriver": "^2.44.1",
+    "chromedriver": "^114.0.1",
     "css-loader": "^6.8.1",
-    "eslint": "^4.15.0",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint": "^8.42.0",
+    "eslint-plugin-react": "7.32",
     "favicons-webpack-plugin": "^6.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.6",
-    "mocha": "^5.1.1",
+    "mocha": "^10.2.0",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.3.1",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "sinon": "^4.5.0",
     "style-loader": "^0.20.3",
-    "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.0"
   },
@@ -45,6 +43,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.3",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "webpack": "^5.86.0"
   }
 }
